replace deprecated getId() to threadId()